--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accessible Routes</title>
+    <title>UMBC - ANS</title>
+    <link rel="icon" href="/favicon.png" type="image/png" sizes="32x32">
   </head>
   <body>
     <div id="root"></div>
